--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation 'com.ozforensics.liveness:sdk:8.0.2'
+    implementation 'com.ozforensics.liveness:full:8.0.2'
 }
